--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -9,7 +9,9 @@
 
 .nav__item {
   display: inline-block;
-  span {
+  overflow: hidden;
+  position: relative;
+  p {
     display: block;
     font-size: $font-md;
 
@@ -22,5 +24,21 @@
     &:hover {
       background: $color-tertiary;
     }
+  }
+}
+
+li .ripple {
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.7);
+
+  position: absolute;
+  transform: scale(0);
+  animation: ripple 0.6s linear;
+}
+
+@keyframes ripple {
+  to {
+    transform: scale(2.5);
+    opacity: 0;
   }
 }
