--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -7,6 +7,9 @@
   margin-right: 1rem;
   height: 100%;
   width: 80%;
+  @include respond(tab-port) {
+    display: none;
+  }
 }
 .search__form {
   position: relative;
