--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,7 +3,7 @@ $white: #fff;
 $black: #000;
 $red: #df2408;
 $pink: #fc66cc;
-$blue: rgb(26, 115, 232);
+$blue: #1e88e5;
 $purple: rgb(65, 0, 153);
 
 $color-primary: #0f0f0f;
