--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -50,15 +50,36 @@
   }
 }
 
+.email__box,
+.password__box {
+  width: 90% !important;
+  margin: 0 auto;
+}
+
 .modal__email,
 .modal__password {
-  width: 80%;
-  margin: 0 auto;
+  width: 100%;
+
   display: block;
+  border: none;
+  border-bottom: 1px solid $black;
+  position: relative;
+
 }
 .modal__email {
   margin-bottom: 1rem;
+
+  .email__label {
+    color: $black;
+  }
 }
+
+.modal__password {
+  .email__password {
+    color: $black;
+  }
+}
+
 .modal__button {
   font-style: normal;
   float: right;
