--- a/client/src/layout/Content/Register/Register.module.scss
+++ b/client/src/layout/Content/Register/Register.module.scss
@@ -16,3 +16,62 @@
     }
   }
 }
+.register__group {
+  display: flex;
+  flex-direction: column;
+}
+.register__label {
+  position: relative;
+  display: block;
+  z-index: 2;
+  transition: all 0.2s;
+  order: 1;
+  transform: translate(2rem, 0);
+
+  user-select: none;
+}
+
+.register__email,
+.register__user,
+.register__password {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: $color-fourth;
+  border: none;
+  border-radius: 2px;
+  padding: 1rem 1rem;
+  color: $white;
+  order: 2;
+
+  &::placeholder {
+    color: lighten($color-fourth, 60%);
+    font-size: $font-md;
+  }
+  &:placeholder-shown + label {
+    transform: translate(2rem, 2.75rem);
+  }
+
+  &:invalid {
+    border-bottom: 1px solid $red !important; 
+  }
+  &:empty {
+    border: none;
+  }
+}
+
+.register__button {
+  @include reset-button;
+  cursor: pointer;
+  background-color: $white;
+  color: $black;
+  padding: 1rem 1.5rem;
+  border-radius: 2px;
+  transition: all 0.5s;
+  &:hover {
+    transform: translateY(-5px);
+  }
+  &:active {
+    transform: translateY(-2px);
+  }
+}
